<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_up_background"
    android:padding="25sp"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_user"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNicknameNewUser"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:hint="@string/nickname"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/etNewUserPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNewUserPassword"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="35"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNameNewUser"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:hint="@string/nombre"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSurnameNewUser"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:hint="@string/surname"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="25dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/trySignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:width="380dp"
            android:backgroundTint="@color/sign_up_buttons"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    users.add(User(2802L, "AHOZ", "lock_password", "Aylen", "Hoz", 20000.50, "2021/01/11"))-->